TFP-1859 endret hvordan stillingsprosent og stønadskontoer tas inn i grunnlaget (#41)